// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OnboardingWizard (Snapshot/Charakterisierung) > Snapshot: Backup-Step im Restore-Flow (Step 6, isRestoreFlow=true) 1`] = `
<div
  class="fixed inset-0 bg-zinc-50 dark:bg-zinc-950 z-50 flex flex-col items-center justify-center p-4"
>
  <div
    class="w-full max-w-md bg-white dark:bg-zinc-800 rounded-2xl shadow-2xl overflow-hidden flex flex-col max-h-[90vh]"
  >
    <div
      class="h-1.5 bg-zinc-100 dark:bg-zinc-700 w-full"
    >
      <div
        class="h-full bg-emerald-500"
      />
    </div>
    <div
      class="flex-1 overflow-y-auto p-6 scrollbar-hide"
    >
      <div
        class="space-y-6"
      >
        <div
          class="text-center space-y-2"
        >
          <div
            class="w-16 h-16 bg-purple-100 dark:bg-purple-900/30 rounded-2xl flex items-center justify-center mx-auto mb-4 text-purple-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shield-check"
              fill="none"
              height="32"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </div>
          <h2
            class="text-2xl font-bold text-zinc-900 dark:text-white"
          >
            Backup wiederherstellen
          </h2>
          <p
            class="text-zinc-500 dark:text-zinc-400"
          >
            Wo liegt dein Backup?
          </p>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="grid grid-cols-1 gap-2"
          >
            <button
              class="w-full p-3 rounded-xl border border-zinc-200 dark:border-zinc-700 flex items-center gap-3 hover:bg-zinc-50 dark:hover:bg-zinc-700/50 transition-colors group"
              type="button"
            >
              <div
                class="p-2 bg-white dark:bg-zinc-700 rounded-lg shadow-sm group-hover:scale-110 transition-transform"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-cloud text-blue-500"
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.5 19H9a7 7 0 1 1 6.71-9h1.79a4.5 4.5 0 1 1 0 9Z"
                  />
                </svg>
              </div>
              <div
                class="text-left flex-1"
              >
                <div
                  class="font-bold text-sm text-zinc-800 dark:text-white"
                >
                  Aus Google Drive
                </div>
              </div>
            </button>
            <button
              class="w-full p-3 rounded-xl border border-zinc-200 dark:border-zinc-700 flex items-center gap-3 hover:bg-zinc-50 dark:hover:bg-zinc-700/50 transition-colors group"
              type="button"
            >
              <div
                class="p-2 bg-white dark:bg-zinc-700 rounded-lg shadow-sm group-hover:scale-110 transition-transform"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-cloud text-orange-500"
                  fill="none"
                  height="18"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.5 19H9a7 7 0 1 1 6.71-9h1.79a4.5 4.5 0 1 1 0 9Z"
                  />
                </svg>
              </div>
              <div
                class="text-left flex-1"
              >
                <div
                  class="font-bold text-sm text-zinc-800 dark:text-white"
                >
                  Aus Nextcloud
                </div>
              </div>
            </button>
            <div
              class="grid grid-cols-2 gap-2"
            >
              <button
                class="p-3 rounded-xl border border-zinc-200 dark:border-zinc-700 flex flex-col items-center justify-center gap-2 hover:bg-zinc-50 dark:hover:bg-zinc-700/50 transition-colors"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-folder-input text-yellow-500"
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 9V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H20a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-1"
                  />
                  <path
                    d="M2 13h10"
                  />
                  <path
                    d="m9 16 3-3-3-3"
                  />
                </svg>
                <span
                  class="text-xs font-bold text-zinc-700 dark:text-zinc-300"
                >
                  Lokaler Ordner
                </span>
              </button>
              <div
                class="relative"
              >
                <input
                  accept=".json"
                  class="hidden"
                  type="file"
                />
                <button
                  class="w-full h-full p-3 rounded-xl border border-zinc-200 dark:border-zinc-700 flex flex-col items-center justify-center gap-2 hover:bg-zinc-50 dark:hover:bg-zinc-700/50 transition-colors"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-upload text-purple-500"
                    fill="none"
                    height="20"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 3v12"
                    />
                    <path
                      d="m17 8-5-5-5 5"
                    />
                    <path
                      d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
                    />
                  </svg>
                  <span
                    class="text-xs font-bold text-zinc-700 dark:text-zinc-300"
                  >
                    Datei (.json)
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-4 border-t border-zinc-100 dark:border-zinc-700 flex justify-between items-center bg-zinc-50/50 dark:bg-zinc-800/50 backdrop-blur-sm"
    >
      <button
        class="px-4 py-2 font-bold text-zinc-400 hover:text-zinc-600 dark:hover:text-zinc-200 transition-colors flex items-center gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
         
        Zurück
      </button>
    </div>
  </div>
</div>
`;

exports[`OnboardingWizard (Snapshot/Charakterisierung) > Snapshot: Backup-Step im Setup-Flow (Step 6, !isRestoreFlow) 1`] = `
<div
  class="fixed inset-0 bg-zinc-50 dark:bg-zinc-950 z-50 flex flex-col items-center justify-center p-4"
>
  <div
    class="w-full max-w-md bg-white dark:bg-zinc-800 rounded-2xl shadow-2xl overflow-hidden flex flex-col max-h-[90vh]"
  >
    <div
      class="h-1.5 bg-zinc-100 dark:bg-zinc-700 w-full"
    >
      <div
        class="h-full bg-emerald-500"
      />
    </div>
    <div
      class="flex-1 overflow-y-auto p-6 scrollbar-hide"
    >
      <div
        class="space-y-6"
      >
        <div
          class="text-center space-y-2"
        >
          <div
            class="w-16 h-16 bg-purple-100 dark:bg-purple-900/30 rounded-2xl flex items-center justify-center mx-auto mb-4 text-purple-600"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shield-check"
              fill="none"
              height="32"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </div>
          <h2
            class="text-2xl font-bold text-zinc-900 dark:text-white"
          >
            Sicher ist sicher
          </h2>
          <p
            class="text-zinc-500 dark:text-zinc-400"
          >
            Willst du deine Daten zusätzlich sichern?
          </p>
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="flex items-start gap-2 p-3 rounded-xl bg-amber-50 dark:bg-amber-900/20 border border-amber-100 dark:border-amber-900/40"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-info text-amber-600 dark:text-amber-400 mt-0.5 flex-shrink-0"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 16v-4"
              />
              <path
                d="M12 8h.01"
              />
            </svg>
            <p
              class="text-xs text-amber-900 dark:text-amber-100 leading-relaxed"
            >
              <span
                class="font-bold"
              >
                Komplett optional.
              </span>
               Du kannst diesen Schritt einfach überspringen — die App funktioniert auch ohne Backup. Einstellen kannst du das jederzeit später.
            </p>
          </div>
          <div
            class="flex items-start gap-2 p-3 rounded-xl bg-emerald-50 dark:bg-emerald-900/20 border border-emerald-100 dark:border-emerald-900/40"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-text text-emerald-600 dark:text-emerald-400 mt-0.5 flex-shrink-0"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
            <p
              class="text-xs text-emerald-900 dark:text-emerald-100 leading-relaxed"
            >
              <span
                class="font-bold"
              >
                Bonus:
              </span>
               Wenn du ein Backup aktivierst, legt die App 
              <span
                class="font-bold"
              >
                automatisch jeden Monat
              </span>
               einen fertigen PDF-Stundenzettel dazu — zum Abgeben oder Archivieren.
            </p>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            aria-pressed="false"
            class="w-full p-4 rounded-xl border-2 cursor-pointer flex items-center justify-between transition-all border-zinc-200 dark:border-zinc-600 bg-white dark:bg-zinc-800"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="p-2 rounded-lg bg-zinc-100 dark:bg-zinc-700 text-zinc-400"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-cloud-lightning"
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 16.326A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 .5 8.973"
                  />
                  <path
                    d="m13 12-3 5h4l-3 5"
                  />
                </svg>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="font-bold text-zinc-800 dark:text-white"
                >
                  Google Drive
                </div>
                <div
                  class="text-xs text-zinc-500"
                >
                  Tägliches Backup + Monats-PDF in deine Cloud
                </div>
              </div>
            </div>
            <div
              class="w-6 h-6 rounded-full border-2 flex items-center justify-center transition-colors border-zinc-300 dark:border-zinc-500"
            />
          </div>
          <div
            aria-pressed="false"
            class="w-full p-4 rounded-xl border-2 cursor-pointer flex items-center justify-between transition-all border-zinc-200 dark:border-zinc-600 bg-white dark:bg-zinc-800"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="p-2 rounded-lg bg-zinc-100 dark:bg-zinc-700 text-zinc-400"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-folder-input"
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 9V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H20a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-1"
                  />
                  <path
                    d="M2 13h10"
                  />
                  <path
                    d="m9 16 3-3-3-3"
                  />
                </svg>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="font-bold text-zinc-800 dark:text-white"
                >
                  Am Handy speichern
                </div>
                <div
                  class="text-xs text-zinc-500"
                >
                  Backup + PDF in einen Ordner deiner Wahl
                </div>
              </div>
            </div>
            <div
              class="w-6 h-6 rounded-full border-2 flex items-center justify-center transition-colors border-zinc-300 dark:border-zinc-500"
            />
          </div>
          <div
            aria-disabled="false"
            aria-pressed="false"
            class="w-full p-4 rounded-xl border-2 cursor-pointer flex items-center justify-between transition-all border-zinc-200 dark:border-zinc-600 bg-white dark:bg-zinc-800"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="p-2 rounded-lg bg-zinc-100 dark:bg-zinc-700 text-zinc-400"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-server-cog"
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m10.852 14.772-.383.923"
                  />
                  <path
                    d="M13.148 14.772a3 3 0 1 0-2.296-5.544l-.383-.923"
                  />
                  <path
                    d="m13.148 9.228.383-.923"
                  />
                  <path
                    d="m13.53 15.696-.382-.924a3 3 0 1 1-2.296-5.544"
                  />
                  <path
                    d="m14.772 10.852.923-.383"
                  />
                  <path
                    d="m14.772 13.148.923.383"
                  />
                  <path
                    d="M4.5 10H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2h-.5"
                  />
                  <path
                    d="M4.5 14H4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2h-.5"
                  />
                  <path
                    d="M6 18h.01"
                  />
                  <path
                    d="M6 6h.01"
                  />
                  <path
                    d="m9.228 10.852-.923-.383"
                  />
                  <path
                    d="m9.228 13.148-.923.383"
                  />
                </svg>
              </div>
              <div
                class="text-left"
              >
                <div
                  class="font-bold text-zinc-800 dark:text-white"
                >
                  Nextcloud
                </div>
                <div
                  class="text-xs text-zinc-500"
                >
                  Auf deiner eigenen Cloud — volle Datenhoheit
                </div>
              </div>
            </div>
            <div
              class="w-6 h-6 rounded-full border-2 flex items-center justify-center transition-colors border-zinc-300 dark:border-zinc-500"
            />
          </div>
          <p
            class="text-center text-xs text-zinc-400 dark:text-zinc-500 italic pt-1"
          >
            Nix dabei? Kein Problem — tipp einfach auf ‚Weiter‘.
          </p>
        </div>
      </div>
    </div>
    <div
      class="p-4 border-t border-zinc-100 dark:border-zinc-700 flex justify-between items-center bg-zinc-50/50 dark:bg-zinc-800/50 backdrop-blur-sm"
    >
      <button
        class="px-4 py-2 font-bold text-zinc-400 hover:text-zinc-600 dark:hover:text-zinc-200 transition-colors flex items-center gap-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-left"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12 19-7-7 7-7"
          />
          <path
            d="M19 12H5"
          />
        </svg>
         
        Zurück
      </button>
      <button
        class="px-6 py-2 bg-zinc-900 dark:bg-white text-white dark:text-zinc-900 font-bold rounded-xl flex items-center gap-2 hover:bg-zinc-800 dark:hover:bg-zinc-200 transition-colors shadow-lg shadow-zinc-900/10"
        type="button"
      >
        Passt
         
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`OnboardingWizard (Snapshot/Charakterisierung) > Snapshot: Summary-Step (Step 7) via Simple-Mode-Fast-Path 1`] = `
<div
  class="fixed inset-0 bg-zinc-50 dark:bg-zinc-950 z-50 flex flex-col items-center justify-center p-4"
>
  <div
    class="w-full max-w-md bg-white dark:bg-zinc-800 rounded-2xl shadow-2xl overflow-hidden flex flex-col max-h-[90vh]"
  >
    <div
      class="h-1.5 bg-zinc-100 dark:bg-zinc-700 w-full"
    >
      <div
        class="h-full bg-emerald-500"
      />
    </div>
    <div
      class="flex-1 overflow-y-auto p-6 scrollbar-hide"
    >
      <div
        class="space-y-6 text-center py-4"
      >
        <div
          class="w-20 h-20 bg-green-100 dark:bg-green-900/30 rounded-full flex items-center justify-center mx-auto mb-4 text-green-600 shadow-lg shadow-green-500/20 animate-in zoom-in duration-300"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="40"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 24 24"
            width="40"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
        <div
          class="space-y-2"
        >
          <h2
            class="text-3xl font-bold text-zinc-900 dark:text-white"
          >
            Perfekt! 🎉
          </h2>
          <p
            class="text-zinc-500 dark:text-zinc-400 max-w-[280px] mx-auto leading-relaxed"
          >
            Alles eingerichtet. Jetzt zeigen wir dir in wenigen Klicks, wo du was findest.
          </p>
        </div>
        <div
          class="flex items-center justify-center gap-2 text-xs text-emerald-600 dark:text-emerald-400 font-bold"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sparkles"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
            />
            <path
              d="M20 2v4"
            />
            <path
              d="M22 4h-4"
            />
            <circle
              cx="4"
              cy="20"
              r="2"
            />
          </svg>
          <span>
            Kurze Tour — dauert nur a Minütchen
          </span>
        </div>
        <div
          class="pt-2 space-y-2"
        >
          <button
            class="w-full py-3 text-zinc-500 dark:text-zinc-400 font-bold rounded-xl hover:bg-zinc-100 dark:hover:bg-zinc-700/50 transition-colors flex items-center justify-center gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-left"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
             
            Zurück
          </button>
          <button
            class="w-full py-4 bg-zinc-900 dark:bg-white text-white dark:text-zinc-900 font-bold text-lg rounded-2xl shadow-xl hover:scale-[1.02] active:scale-[0.98] transition-all flex items-center justify-center gap-3"
            type="button"
          >
            Los, zeig mir die App
             
            <svg
              aria-hidden="true"
              class="lucide lucide-play"
              fill="currentColor"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OnboardingWizard (Snapshot/Charakterisierung) > Snapshot: Welcome-Step (Step 0) 1`] = `
<div
  class="fixed inset-0 bg-zinc-50 dark:bg-zinc-950 z-50 flex flex-col items-center justify-center p-4"
>
  <div
    class="w-full max-w-md bg-white dark:bg-zinc-800 rounded-2xl shadow-2xl overflow-hidden flex flex-col max-h-[90vh]"
  >
    <div
      class="flex-1 overflow-y-auto p-6 scrollbar-hide"
    >
      <div
        class="space-y-6 flex flex-col items-center justify-center py-4"
      >
        <div
          class="text-center space-y-3"
        >
          <div
            class="w-24 h-24 rounded-3xl overflow-hidden mx-auto shadow-xl shadow-emerald-500/20 ring-1 ring-black/5 dark:ring-white/10 bg-white dark:bg-zinc-800"
          >
            <img
              alt="eStundnzettl Logo"
              class="w-full h-full object-contain"
              src="/src/assets/logo.png"
            />
          </div>
          <h1
            class="text-3xl font-black text-zinc-900 dark:text-white tracking-tight"
          >
            Servus! 👋
          </h1>
          <p
            class="text-zinc-600 dark:text-zinc-300 font-medium"
          >
            Schön, dass du da bist.
          </p>
          <p
            class="text-sm text-zinc-500 dark:text-zinc-400 max-w-[300px] mx-auto leading-relaxed"
          >
            Dein 
            <span
              class="font-bold text-emerald-600 dark:text-emerald-400"
            >
              eStundnzettl
            </span>
             — die einfache Zeiterfassung, die einfach funktioniert. Ganz ohne Schnickschnack.
          </p>
        </div>
        <div
          class="w-full grid grid-cols-3 gap-2"
        >
          <div
            class="flex flex-col items-center gap-1 p-3 rounded-xl bg-emerald-50 dark:bg-emerald-900/20 border border-emerald-100 dark:border-emerald-900/40"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-smartphone text-emerald-600 dark:text-emerald-400"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="2"
                ry="2"
                width="14"
                x="5"
                y="2"
              />
              <path
                d="M12 18h.01"
              />
            </svg>
            <span
              class="text-[10px] font-bold text-center text-emerald-700 dark:text-emerald-300 leading-tight"
            >
              Alles am Handy
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1 p-3 rounded-xl bg-emerald-50 dark:bg-emerald-900/20 border border-emerald-100 dark:border-emerald-900/40"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-wifi-off text-emerald-600 dark:text-emerald-400"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 20h.01"
              />
              <path
                d="M8.5 16.429a5 5 0 0 1 7 0"
              />
              <path
                d="M5 12.859a10 10 0 0 1 5.17-2.69"
              />
              <path
                d="M19 12.859a10 10 0 0 0-2.007-1.523"
              />
              <path
                d="M2 8.82a15 15 0 0 1 4.177-2.643"
              />
              <path
                d="M22 8.82a15 15 0 0 0-11.288-3.764"
              />
              <path
                d="m2 2 20 20"
              />
            </svg>
            <span
              class="text-[10px] font-bold text-center text-emerald-700 dark:text-emerald-300 leading-tight"
            >
              Offline nutzbar
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1 p-3 rounded-xl bg-emerald-50 dark:bg-emerald-900/20 border border-emerald-100 dark:border-emerald-900/40"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-lock text-emerald-600 dark:text-emerald-400"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="11"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="11"
              />
              <path
                d="M7 11V7a5 5 0 0 1 10 0v4"
              />
            </svg>
            <span
              class="text-[10px] font-bold text-center text-emerald-700 dark:text-emerald-300 leading-tight"
            >
              Daten bleiben bei dir
            </span>
          </div>
        </div>
        <div
          class="w-full space-y-2.5"
        >
          <button
            class="w-full p-4 bg-emerald-600 text-white rounded-2xl font-bold text-base shadow-xl shadow-emerald-900/10 hover:bg-emerald-700 hover:scale-[1.02] active:scale-[0.98] transition-all flex items-start gap-3 text-left"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clipboard-list shrink-0 mt-0.5"
              fill="none"
              height="22"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="4"
                rx="1"
                ry="1"
                width="8"
                x="8"
                y="2"
              />
              <path
                d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
              />
              <path
                d="M12 11h4"
              />
              <path
                d="M12 16h4"
              />
              <path
                d="M8 11h.01"
              />
              <path
                d="M8 16h.01"
              />
            </svg>
            <span>
              <span
                class="block"
              >
                Nur Arbeitszeiten eintragen
              </span>
              <span
                class="block text-xs font-medium text-emerald-50/90 mt-0.5"
              >
                Schnellstart: Profil ausfüllen und loslegen.
              </span>
            </span>
          </button>
          <button
            class="w-full p-4 bg-white dark:bg-zinc-800 border-2 border-zinc-100 dark:border-zinc-700 text-zinc-800 dark:text-zinc-200 rounded-2xl font-bold text-sm hover:border-blue-200 dark:hover:border-blue-800 hover:bg-blue-50/50 dark:hover:bg-blue-900/10 transition-all flex items-start gap-3 text-left"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calculator text-blue-600 shrink-0 mt-0.5"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="2"
                width="16"
                x="4"
                y="2"
              />
              <line
                x1="8"
                x2="16"
                y1="6"
                y2="6"
              />
              <line
                x1="16"
                x2="16"
                y1="14"
                y2="18"
              />
              <path
                d="M16 10h.01"
              />
              <path
                d="M12 10h.01"
              />
              <path
                d="M8 10h.01"
              />
              <path
                d="M12 14h.01"
              />
              <path
                d="M8 14h.01"
              />
              <path
                d="M12 18h.01"
              />
              <path
                d="M8 18h.01"
              />
            </svg>
            <span>
              <span
                class="block"
              >
                Mit Berechnung & Auswertung
              </span>
              <span
                class="block text-xs font-medium text-zinc-500 dark:text-zinc-400 mt-0.5"
              >
                Für Soll/Ist, Saldo, Überstunden und Berichte.
              </span>
            </span>
          </button>
          <button
            class="w-full p-4 bg-white dark:bg-zinc-800 border-2 border-zinc-100 dark:border-zinc-700 text-zinc-700 dark:text-zinc-300 rounded-2xl font-bold text-sm hover:border-emerald-200 dark:hover:border-zinc-600 hover:bg-emerald-50/50 dark:hover:bg-zinc-700/50 transition-all flex items-center justify-center gap-3"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-refresh-cw"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
              />
              <path
                d="M21 3v5h-5"
              />
              <path
                d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
              />
              <path
                d="M8 16H3v5"
              />
            </svg>
            Ich hab schon ein Backup
          </button>
          <button
            class="w-full p-2 text-emerald-700 dark:text-emerald-300 rounded-xl font-bold text-xs hover:bg-emerald-50 dark:hover:bg-emerald-900/20 transition-all flex items-center justify-center gap-2"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-flask-conical"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 2v6a2 2 0 0 0 .245.96l5.51 10.08A2 2 0 0 1 18 22H6a2 2 0 0 1-1.755-2.96l5.51-10.08A2 2 0 0 0 10 8V2"
              />
              <path
                d="M6.453 15h11.094"
              />
              <path
                d="M8.5 2h7"
              />
            </svg>
            Nur mal reinschnuppern (Demo)
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
